--- a/accueil.html
+++ b/accueil.html
@@ -139,7 +139,7 @@
           <li class="mb-4 lg:mb-0 lg:pr-2" data-te-nav-item-ref>
             <a
               class="p-0 text-black opacity-60 hover:opacity-80 focus:opacity-80 disabled:text-black/30 lg:px-2 [&.active]:text-black/90 dark:[&.active]:text-neutral-400"
-              href="#"
+              href="connexion.html"
               data-te-nav-link-ref
               >CONNEXION</a
             >
